--- a/charts/prometheus-federator/templates/system-namespaces-configmap.yaml
+++ b/charts/prometheus-federator/templates/system-namespaces-configmap.yaml
@@ -11,8 +11,8 @@ data:
 {{- if .Values.helmProjectOperator.projectReleaseNamespaces.enabled }}
 {{- if .Values.helmProjectOperator.projectReleaseNamespaces.labelValue }}
       "projectReleaseLabelValue": {{ .Values.helmProjectOperator.projectReleaseNamespaces.labelValue | quote }},
-{{- else if .Values.helmProjectOperator.global.cattle.systemProjectId }}
-      "projectReleaseLabelValue": {{ .Values.helmProjectOperator.global.cattle.systemProjectId | quote }},
+{{- else if .Values.global.cattle.systemProjectId }}
+      "projectReleaseLabelValue": {{ .Values.global.cattle.systemProjectId | quote }},
 {{- else }}
       "projectReleaseLabelValue": "",
 {{- end }}
@@ -20,9 +20,9 @@ data:
       "projectReleaseLabelValue": "",
 {{- end }}
 {{- if not .Values.helmProjectOperator.projectReleaseNamespaces.enabled }}
-      "systemProjectLabelValues": {{ append .Values.helmProjectOperator.otherSystemProjectLabelValues .Values.helmProjectOperator.global.cattle.systemProjectId | toJson }}
-{{- else if and (ne (len .Values.helmProjectOperator.global.cattle.systemProjectId) 0) (ne (len .Values.helmProjectOperator.projectReleaseNamespaces.labelValue) 0) (ne .Values.helmProjectOperator.projectReleaseNamespaces.labelValue .Values.helmProjectOperator.global.cattle.systemProjectId) }}
-      "systemProjectLabelValues": {{ append .Values.helmProjectOperator.otherSystemProjectLabelValues .Values.helmProjectOperator.global.cattle.systemProjectId | toJson }}
+      "systemProjectLabelValues": {{ append .Values.helmProjectOperator.otherSystemProjectLabelValues .Values.global.cattle.systemProjectId | toJson }}
+{{- else if and (ne (len .Values.global.cattle.systemProjectId) 0) (ne (len .Values.helmProjectOperator.projectReleaseNamespaces.labelValue) 0) (ne .Values.helmProjectOperator.projectReleaseNamespaces.labelValue .Values.global.cattle.systemProjectId) }}
+      "systemProjectLabelValues": {{ append .Values.helmProjectOperator.otherSystemProjectLabelValues .Values.global.cattle.systemProjectId | toJson }}
 {{- else if len .Values.helmProjectOperator.otherSystemProjectLabelValues }}
       "systemProjectLabelValues": {{ .Values.helmProjectOperator.otherSystemProjectLabelValues | toJson }}
 {{- else }}
