update go:generate targets
Signed-off-by: Alexandre Lamarre <alexandre.lamarre@suse.com>

--- a/.github/workflows/hl-e2e.yaml
+++ b/.github/workflows/hl-e2e.yaml
@@ -11,7 +11,7 @@ on:
       - 'crds/helm-locker/**'
       - 'package/Dockerfile-helm-locker'
       - 'cmd/helm-locker/**'
-      - 'pkg/helm-locker/**'
+      - 'internal/helm-locker/**'
 
 env:
   CLUSTER_NAME : e2e-ci-helm-locker
