--- a/.github/workflows/hl-ci.yaml
+++ b/.github/workflows/hl-ci.yaml
@@ -3,9 +3,23 @@ name: "[helm-locker] CI"
 on:
   workflow_call:
   pull_request:
+    paths-ignore:
+      - 'docs/**'
+      - '*.md'
+      - '.gitignore'
+      - 'CODEOWNERS'
+      - 'LICENSE'
   push:
     branches:
       - main
+      - release/v[0-9]+.x
+      - release/v[0-9]+.[0-9]+.[0-9]+
+    paths-ignore:
+      - 'docs/**'
+      - '*.md'
+      - '.gitignore'
+      - 'CODEOWNERS'
+      - 'LICENSE'
 
 jobs:
   build:
