--- a/.github/workflows/prom-fed-e2e-ci.yaml
+++ b/.github/workflows/prom-fed-e2e-ci.yaml
@@ -13,9 +13,7 @@ on:
   pull_request:
     paths-ignore:
       - 'docs/**'
-      - 'scripts/**'
       - '*.md'
-      - '*.dapper'
       - '.gitignore'
       - 'CODEOWNERS'
       - 'LICENSE'
@@ -23,12 +21,14 @@ on:
   push:
     branches:
       - main
+      - release/v[0-9]+.x
+      - release/v[0-9]+.[0-9]+.[0-9]+
     paths-ignore:
       - 'docs/**'
       - '*.md'
+      - '.gitignore'
       - 'CODEOWNERS'
       - 'LICENSE'
-
 env:
   GOARCH: amd64
   CGO_ENABLED: 0
