--- a/.github/workflows/prom-fed-e2e-ci.yaml
+++ b/.github/workflows/prom-fed-e2e-ci.yaml
@@ -56,8 +56,6 @@ jobs:
           # k3d version list k3s | sed 's/+/-/' | sort -h
           - ${{ github.event.inputs.k3s_version || 'v1.28.14-k3s1' }}
     runs-on : runs-on,image=ubuntu22-full-${{ matrix.arch }},runner=4cpu-linux-${{ matrix.arch }},run-id=${{ github.run_id }}
-    env:
-      TAG: ${{ needs.prebuild-env.outputs.branch_static_tag }}
     steps:
       -
         uses: actions/checkout@v4
@@ -74,11 +72,15 @@ jobs:
         name: Install mikefarah/yq
         run: |
           sudo wget https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_${{ matrix.arch == 'x64' && 'amd64' || matrix.arch  }} -O /usr/bin/yq && sudo chmod +x /usr/bin/yq;
+      - name : Export image version
+        run : |
+          source ./scripts/version
+          echo IMAGE=$IMAGE >> $GITHUB_ENV
       -
         name: Perform pre-e2e image build
         run: |
-          REPO=${REPO} TAG=${TAG} make build;
-          REPO=${REPO} TAG=${TAG} make package;
+          make build;
+          make package;
       -
         name : Install k3d
         run : ./.github/workflows/e2e/scripts/install-k3d.sh
@@ -88,7 +90,7 @@ jobs:
       -
         name: Import Images Into k3d
         run: |
-          k3d image import ${REPO}/prometheus-federator:${TAG} -c $CLUSTER_NAME;
+          k3d image import ${IMAGE} -c $CLUSTER_NAME;
       -
         name: Setup kubectl context
         run: |
