Add TAG env back to e2e workflow

--- a/.github/workflows/prom-fed-e2e-ci.yaml
+++ b/.github/workflows/prom-fed-e2e-ci.yaml
@@ -75,6 +75,7 @@ jobs:
       - name : Export image version
         run : |
           source ./scripts/version
+          echo TAG=$TAG >> $GITHUB_ENV
           echo IMAGE=$IMAGE >> $GITHUB_ENV
       -
         name: Perform pre-e2e image build
