--- a/.github/workflows/hl-e2e.yaml
+++ b/.github/workflows/hl-e2e.yaml
@@ -23,7 +23,6 @@ on:
 
 env:
   CLUSTER_NAME : e2e-ci-helm-locker
-  K3S_VERSION : v1.27.9-k3s1
 
 jobs:
   build:
@@ -37,6 +36,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Set K3S Min/Max Versions
+        id: set-vars
+        run: bash ./scripts/k3s-version >> $GITHUB_ENV
+      - name: Set K3S_VERSION
+        id: set-vars
+        run: echo "K3S_VERSION=$K3S_MIN_VERSION" >> $GITHUB_ENV
       - name : Set up Go
         uses : actions/setup-go@v5
         with:
