--- a/.github/workflows/hpo-e2e-ci.yaml
+++ b/.github/workflows/hpo-e2e-ci.yaml
@@ -43,9 +43,6 @@ jobs:
         arch:
           - x64
           - arm64
-        k3s_version:
-          # k3d version list k3s | sed 's/+/-/' | sort -h
-          - ${{ github.event.inputs.k3s_version || 'v1.27.9-k3s1' }}
     runs-on : runs-on,image=ubuntu22-full-${{ matrix.arch }},runner=4cpu-linux-${{ matrix.arch }},run-id=${{ github.run_id }}
     env:
       K3S_VERSION: ${{ matrix.k3s_version }}
@@ -53,6 +50,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Set K3S Min/Max Versions
+        id: set-vars
+        run: bash ./scripts/k3s-version >> $GITHUB_ENV
+      - name: Set K3S_VERSION
+        id: set-vars
+        run: echo "K3S_VERSION=${{ inputs.k3s_version || env.K3S_MIN_VERSION }}" >> $GITHUB_ENV
       - name : setup Go
         uses : actions/setup-go@v5
         with:
@@ -67,7 +70,7 @@ jobs:
       - name : Install k3d
         run : ./.github/workflows/e2e/scripts/install-k3d.sh
       - name : Setup k3d cluster
-        run : K3S_VERSION=${{ env.K3S_VERSION }} ./.github/workflows/e2e/scripts/setup-cluster.sh
+        run : ./.github/workflows/e2e/scripts/setup-cluster.sh
       - name: Import Images Into k3d
         run: |
           k3d image import ${REPO}/helm-project-operator:${TAG} -c "$CLUSTER_NAME";
