--- a/.github/workflows/prom-fed-e2e-ci.yaml
+++ b/.github/workflows/prom-fed-e2e-ci.yaml
@@ -52,15 +52,18 @@ jobs:
         arch:
           - x64
           - arm64
-        k3s_version:
-          # k3d version list k3s | sed 's/+/-/' | sort -h
-          - ${{ github.event.inputs.k3s_version || 'v1.28.14-k3s1' }}
     runs-on : runs-on,image=ubuntu22-full-${{ matrix.arch }},runner=4cpu-linux-${{ matrix.arch }},run-id=${{ github.run_id }}
     steps:
       -
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Set K3S Min/Max Versions
+        id: set-vars
+        run: bash ./scripts/k3s-version >> $GITHUB_ENV
+      - name: Set K3S_VERSION
+        id: set-vars
+        run: echo "K3S_VERSION=${{ inputs.k3s_version || env.K3S_MIN_VERSION }}" >> $GITHUB_ENV
       - uses: actions/setup-go@v4
         with:
           go-version: '>=1.20.0'
@@ -87,7 +90,7 @@ jobs:
         run : ./.github/workflows/e2e/scripts/install-k3d.sh
       -
         name : Setup k3d cluster
-        run : K3S_VERSION=${{ matrix.k3s_version }} ./.github/workflows/e2e/scripts/setup-cluster.sh
+        run : ./.github/workflows/e2e/scripts/setup-cluster.sh
       -
         name: Import Images Into k3d
         run: |
