--- a/.github/workflows/hl-e2e.yaml
+++ b/.github/workflows/hl-e2e.yaml
@@ -36,12 +36,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Set K3S Min/Max Versions
-        id: set-vars
-        run: bash ./scripts/k3s-version >> $GITHUB_ENV
-      - name: Set K3S_VERSION
-        id: set-vars
-        run: echo "K3S_VERSION=$K3S_MIN_VERSION" >> $GITHUB_ENV
       - name : Set up Go
         uses : actions/setup-go@v5
         with:
@@ -50,6 +44,15 @@ jobs:
       - uses: azure/setup-helm@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install mikefarah/yq
+        run: |
+          sudo wget https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_${{ matrix.arch == 'x64' && 'amd64' || matrix.arch  }} -O /usr/bin/yq && sudo chmod +x /usr/bin/yq;
+      - name: Set K3S Min/Max Versions
+        id: set-vars
+        run: bash ./scripts/k3s-version >> $GITHUB_ENV
+      - name: Set K3S_VERSION
+        id: set-vars
+        run: echo "K3S_VERSION=$K3S_MIN_VERSION" >> $GITHUB_ENV
       - name: build
         run: BUILD_TARGET=helm-locker make build
       - name : Install k3d
