fix(ci): Correct k3s version used for e2e testing (#172)
* Add min/max k3s version used for testing

I'm adding both so in the future we can test both extremes, but for now I'm going to PR just using 1 of them.

* go generate

* Add helper script to grab K3S versions as ENVs and use that in local-e2e

* Make debug output actually create envs that should work in GHA instead of just human debug output

* Source k3s version from `build.yaml` for GHA too

* Fix job step ordering so yq will be installed when k3s version env is set

* remove conflicting and unused ids

* Fix helm-locker yq step

* Export tag style of k3s versions

* Use tags directly in GHA

--- a/.github/workflows/hl-e2e.yaml
+++ b/.github/workflows/hl-e2e.yaml
@@ -23,7 +23,7 @@ on:
 
 env:
   CLUSTER_NAME : e2e-ci-helm-locker
-  K3S_VERSION : v1.27.9-k3s1
+  YQ_VERSION: v4.25.1
 
 jobs:
   build:
@@ -45,6 +45,13 @@ jobs:
       - uses: azure/setup-helm@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install mikefarah/yq
+        run: |
+          sudo wget https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_${{ matrix.arch == 'x64' && 'amd64' || matrix.arch  }} -O /usr/bin/yq && sudo chmod +x /usr/bin/yq;
+      - name: Set K3S Min/Max Versions
+        run: bash ./scripts/k3s-version >> $GITHUB_ENV
+      - name: Set K3S_VERSION
+        run: echo "K3S_VERSION=$K3S_MIN_VERSION_TAG" >> $GITHUB_ENV
       - name: build
         run: BUILD_TARGET=helm-locker make build
       - name : Install k3d
