--- a/.github/workflows/hpo-e2e-ci.yaml
+++ b/.github/workflows/hpo-e2e-ci.yaml
@@ -43,9 +43,6 @@ jobs:
         arch:
           - x64
           - arm64
-        k3s_version:
-          # k3d version list k3s | sed 's/+/-/' | sort -h
-          - ${{ github.event.inputs.k3s_version || 'v1.27.9-k3s1' }}
     runs-on : runs-on,image=ubuntu22-full-${{ matrix.arch }},runner=4cpu-linux-${{ matrix.arch }},run-id=${{ github.run_id }}
     env:
       K3S_VERSION: ${{ matrix.k3s_version }}
@@ -60,6 +57,10 @@ jobs:
       - name: Install mikefarah/yq
         run: |
           sudo wget https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_${{ matrix.arch == 'x64' && 'amd64' || matrix.arch  }} -O /usr/bin/yq && sudo chmod +x /usr/bin/yq;
+      - name: Set K3S Min/Max Versions
+        run: bash ./scripts/k3s-version >> $GITHUB_ENV
+      - name: Set K3S_VERSION
+        run: echo "K3S_VERSION=${{ inputs.k3s_version || env.K3S_MIN_VERSION_TAG }}" >> $GITHUB_ENV
       - name: Perform pre-e2e image build
         run: |
           BUILD_TARGET=helm-project-operator REPO=${REPO} TAG=${TAG} ./scripts/build;
@@ -67,7 +68,7 @@ jobs:
       - name : Install k3d
         run : ./.github/workflows/e2e/scripts/install-k3d.sh
       - name : Setup k3d cluster
-        run : K3S_VERSION=${{ env.K3S_VERSION }} ./.github/workflows/e2e/scripts/setup-cluster.sh
+        run : ./.github/workflows/e2e/scripts/setup-cluster.sh
       - name: Import Images Into k3d
         run: |
           k3d image import ${REPO}/helm-project-operator:${TAG} -c "$CLUSTER_NAME";
