make all helm install steps uniform

--- a/.github/workflows/hl-e2e.yaml
+++ b/.github/workflows/hl-e2e.yaml
@@ -42,7 +42,8 @@ jobs:
         with:
           go-version: 1.22
       - uses: azure/setup-kubectl@v3
-      - uses: azure/setup-helm@v3
+      - name : Install helm
+        uses: azure/setup-helm@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Install mikefarah/yq
