--- a/.github/workflows/hpo-ci.yaml
+++ b/.github/workflows/hpo-ci.yaml
@@ -41,7 +41,8 @@ jobs:
       - name: Install mikefarah/yq
         run: |
           sudo wget https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_${{ matrix.arch == 'x64' && 'amd64' || matrix.arch  }} -O /usr/bin/yq && sudo chmod +x /usr/bin/yq;
-      - uses: azure/setup-helm@v3
+      - name : Install helm
+        uses: azure/setup-helm@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Perform CI
