ci: Improve ability to use CI in forks & fix multiple tag bug (#189)
* Add empty for debug

* fix all runs-on to be dynamic

* only read vault secrets when repo matches rancher/prom-fed

* Install YQ only in GHA runners where YQ isn't available

* Ensure package-helm uses the current tag for chart versioning

* fix runs-on format to respect matrix.arch

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -36,7 +36,7 @@ jobs:
           - v1.30.9-k3s1
           - v1.32.1-k3s1
     name : integration-test
-    runs-on : runs-on,image=ubuntu22-full-${{ matrix.arch }},runner=4cpu-linux-${{ matrix.arch }},run-id=${{ github.run_id }}
+    runs-on: ${{ github.repository == 'rancher/prometheus-federator' && format('runs-on,image=ubuntu22-full-{1},runner=4cpu-linux-{1},run-id={0}', github.run_id, matrix.arch) || 'ubuntu-latest' }}
     steps:
     - name : Checkout repository
       uses : actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
