--- a/charts/prometheus-federator/values.yaml
+++ b/charts/prometheus-federator/values.yaml
@@ -30,6 +30,11 @@ global:
   imagePullSecrets: []
   # - name: "image-pull-secret"
 
+## Prometheus Federator Specific
+priorityClassName: ""
+
+
+## Start of old helm-project-operator subchart configs
 helmProjectOperator:
   # ensures that all resources created by subchart show up as prometheus-federator
   helmApiVersion: dummy.cattle.io/v1alpha1
