--- a/charts/prometheus-federator/templates/cleanup.yaml
+++ b/charts/prometheus-federator/templates/cleanup.yaml
@@ -59,16 +59,16 @@ spec:
             echo "Checking if HelmCharts and HelmReleases CRDs exist...";
             CRD_HELMCHARTS=$(kubectl get crd helmcharts.helm.cattle.io --ignore-not-found)
             CRD_HELMRELEASES=$(kubectl get crd helmreleases.helm.cattle.io --ignore-not-found)
-            if [[ -z "$CRD_HELMCHARTS" && -z "$CRD_HELMRELEASES" ]]; then
+            if [ -z "$CRD_HELMCHARTS" ] && [ -z "$CRD_HELMRELEASES" ]; then
               echo "Neither HelmCharts nor HelmReleases CRDs exist in cluster, nothing to clean.";
               exit 0;
             fi
             RESOURCE_LIST=""
-            if [[ -n "$CRD_HELMCHARTS" ]]; then
+            if [ -n "$CRD_HELMCHARTS" ]; then
               RESOURCE_LIST="helmcharts"
             fi
-            if [[ -n "$CRD_HELMRELEASES" ]]; then
-              if [[ -n "$RESOURCE_LIST" ]]; then
+            if [ -n "$CRD_HELMRELEASES" ]; then
+              if [ -n "$RESOURCE_LIST" ]; then
                 RESOURCE_LIST="$RESOURCE_LIST,"
               fi
               RESOURCE_LIST="${RESOURCE_LIST}helmreleases"
