Remove branch matching as all branches can use the same go for now

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -26,7 +26,6 @@
       "matchUpdateTypes": ["minor","patch"]
     },
     {
-      "matchBaseBranches": ["main"],
       "matchPackageNames": [
         "golang",
         "go",
@@ -35,7 +34,20 @@
       "allowedVersions": "<1.24.0"
     },
     {
-      "matchBaseBranches": ["main"],
+      "matchDatasources": [
+        "golang-version"
+      ],
+      "allowedVersions": "<1.24.0"
+    },
+    {
+      "matchPackageNames": [
+        "golang",
+        "go",
+        "/registry.suse.com/bci/golang/"
+      ],
+      "allowedVersions": "<1.24.0"
+    },
+    {
       "matchDatasources": [
         "golang-version"
       ],
@@ -43,11 +55,11 @@
     },
     {
       "matchBaseBranches": ["main"],
-      "allowedVersions": "<1.33.0",
       "matchPackageNames": [
         "/kubernetes/kubernetes/",
         "/rancher/kubectl/"
-      ]
+      ],
+      "allowedVersions": "<1.33.0"
     }
   ]
 }
