--- a/build.yaml
+++ b/build.yaml
@@ -1,3 +1,3 @@
-rancherProjectMonitoringVersion: 0.5.1
-k3sTestingMaxVersion: v1.32.1+k3s1
-k3sTestingMinVersion: v1.30.9+k3s1
+rancherProjectMonitoringVersion: 0.3.4
+k3sTestingMaxVersion: v1.30.11-k3s1
+k3sTestingMinVersion: v1.27.16-k3s1
