--- a/build.yaml
+++ b/build.yaml
@@ -1,3 +1,4 @@
 rancherProjectMonitoringVersion: 0.5.1
+rancherMonitoringVersion : latest
 k3sTestingMaxVersion: v1.32.1+k3s1
 k3sTestingMinVersion: v1.30.9+k3s1
