--- a/build.yaml
+++ b/build.yaml
@@ -1,4 +1,4 @@
 rancherProjectMonitoringVersion: 0.4.4
-rancherMonitoringVersion : latest
+rancherMonitoringVersion : 105.1.3+up61.3.2
 k3sTestingMaxVersion: v1.31.7-k3s1
 k3sTestingMinVersion: v1.28.15-k3s1
