--- a/build.yaml
+++ b/build.yaml
@@ -2,3 +2,7 @@ rancherProjectMonitoringVersion: 0.5.1
 rancherMonitoringVersion : latest
 k3sTestingMaxVersion: v1.32.1+k3s1
 k3sTestingMinVersion: v1.30.9+k3s1
+
+# Dev use only
+# devChartsSource: https://github.com/{Dev}/ob-team-charts
+# devChartsBranch: {your branch}
