--- a/charts/prometheus-federator/templates/deployment.yaml
+++ b/charts/prometheus-federator/templates/deployment.yaml
@@ -66,14 +66,14 @@ spec:
 {{- end }}
 {{- end }}
 {{- end }}
-{{- if .Values.namespaceRegistrationWorkers  }}
-          - --namespace-registration-workers={{- .Values.namespaceRegistrationWorkers }}
+{{- if .Values.namespaceRegistration.workers  }}
+          - --namespace-registration-workers={{- .Values.namespaceRegistration.workers }}
 {{- end }}
-{{- if .Values.namespaceRegistrationRetryMax  }}
-          - --namespace-registration-retry-max={{- .Values.namespaceRegistrationRetryMax }}
+{{- if .Values.namespaceRegistration.retryMax  }}
+          - --namespace-registration-retry-max={{- .Values.namespaceRegistration.retryMax }}
 {{- end }}
-{{- if .Values.namespaceRegistrationRetryWaitMilliseconds  }}
-          - --namespace-registration-retry-wait-milliseconds={{- .Values.namespaceRegistrationRetryWaitMilliseconds }}
+{{- if .Values.namespaceRegistration.retryWaitMilliseconds  }}
+          - --namespace-registration-retry-wait-milliseconds={{- .Values.namespaceRegistration.retryWaitMilliseconds }}
 {{- end }}
 {{- if .Values.helmProjectOperator.hardenedNamespaces.enabled }}
           - --hardening-options-file=/etc/helmprojectoperator/config/hardening.yaml
