--- a/charts/prometheus-federator/templates/deployment.yaml
+++ b/charts/prometheus-federator/templates/deployment.yaml
@@ -125,6 +125,9 @@ spec:
           volumeMounts:
           - name: config
             mountPath: "/etc/helmprojectoperator/config"
+      {{- if .Values.priorityClassName }}
+      priorityClassName: {{ .Values.priorityClassName }}
+      {{- end }}
       serviceAccountName: {{ template "prometheus-federator.name" . }}
 {{- if .Values.helmProjectOperator.securityContext }}
       securityContext: {{ toYaml .Values.helmProjectOperator.securityContext | nindent 8 }}
