--- a/build.yaml
+++ b/build.yaml
@@ -1,7 +1,7 @@
-rancherProjectMonitoringVersion: 0.5.1
-rancherMonitoringVersion : latest
-k3sTestingMaxVersion: v1.32.1+k3s1
-k3sTestingMinVersion: v1.30.9+k3s1
+rancherProjectMonitoringVersion: 0.3.4
+rancherMonitoringVersion : 104.1.4+up57.0.3
+k3sTestingMaxVersion: v1.30.11-k3s1
+k3sTestingMinVersion: v1.27.16-k3s1
 
 # Dev use only
 # devChartsSource: https://github.com/{Dev}/ob-team-charts
