test : indeed WIP
Signed-off-by: Alexandre Lamarre <alexandre.lamarre@suse.com>

--- a/internal/integration/examples/foo-chart/templates/configmap.yaml
+++ b/internal/integration/examples/foo-chart/templates/configmap.yaml
@@ -5,3 +5,4 @@ metadata:
   namespace: {{ .Release.Namespace }}
 data: 
   "contents" : {{ .Values.contents}}
+  "contents2" : {{ .Values.contents2}}
