--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -44,12 +44,14 @@ jobs:
       uses: actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34 # v5
       with:
         go-version: 1.23
+    - name : Install ginkgo from go.mod
+      run : go install github.com/onsi/ginkgo/v2/ginkgo
     - name : Install helm
       uses: azure/setup-helm@b9e51907a09c216f16ebe8536097933489208112 # v4
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3
+    # - name: Set up Docker Buildx
+    #   uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3
     - name : Install k3d
       run : ./.github/workflows/e2e/scripts/install-k3d.sh
     - name : Setup test environment
@@ -58,18 +60,18 @@ jobs:
         k3d kubeconfig get test-cluster > kubeconfig.yaml
     - name : Debug kubeconfig
       run : cat kubeconfig.yaml 
-    - name : Build helm-project-operator
-      run : BUILD_TARGET=helm-project-operator ./scripts/build
-    - name : Validate build
-      run : ./scripts/validate-ci
-    - name : Package helm-project-operator
-      run : |
-        BUILD_TARGET=helm-project-operator ./scripts/package
-        BUILD_TARGET=helm-project-operator source ./scripts/version
-        k3d image import -c test-cluster $IMAGE
-    - name : Debug k3d images 
-      run : docker exec k3d-test-cluster-server-0 crictl images
-    - name : Run e2e tests
+    # - name : Build helm-project-operator
+    #   run : BUILD_TARGET=helm-project-operator ./scripts/build
+    # - name : Validate build
+    #   run : ./scripts/validate-ci
+    # - name : Package helm-project-operator
+    #   run : |
+    #     BUILD_TARGET=helm-project-operator ./scripts/package
+    #     BUILD_TARGET=helm-project-operator source ./scripts/version
+    #     k3d image import -c test-cluster $IMAGE
+    # - name : Debug k3d images 
+    #   run : docker exec k3d-test-cluster-server-0 crictl images
+    - name : Run integration tests
       run : |
         KUBECONFIG=$KUBECONFIG ./scripts/integration
       env:
