update rpm to 0.5.0

--- a/build.yaml
+++ b/build.yaml
@@ -1,5 +1,5 @@
-rancherProjectMonitoringVersion: 0.3.4
-rancherMonitoringVersion : 104.1.4+up57.0.3
+rancherProjectMonitoringVersion: 0.5.0
+rancherMonitoringVersion : 105.2.0-rc.1+up66.7.1-rancher.10
 k3sTestingMaxVersion: v1.31.7-k3s1
 k3sTestingMinVersion: v1.28.15-k3s1
 
