--- a/charts/prometheus-federator/values.yaml
+++ b/charts/prometheus-federator/values.yaml
@@ -149,13 +149,6 @@ helmProjectOperator:
   helmController:
     # Note: should be disabled for RKE2 clusters since they already run Helm Controller to manage internal Kubernetes components
     enabled: true
-    deployment:
-      enabled : false
-      replicas : 1
-      image:
-        repository: rancher/helm-controller
-        tag: v0.16.10
-        pullPolicy: IfNotPresent
 
     job:
       image:
@@ -268,3 +261,12 @@ namespaceRegistration:
   ## namespaceRegistration.retryWaitMilliseconds sets the time between each retry performed during the Namespace Controller initialization to make sure all Project Registration Namespaces are tracked
   ## If the pod is failing to initialize due to a timout in registering namespaces, tweaking this setting and NamespaceRegistrationRetryMax should fix it
   retryWaitMilliseconds: 5000
+
+helmController:
+  deployment:
+    enabled : false
+    replicas : 1
+    image:
+      repository: rancher/helm-controller
+      tag: v0.16.10
+      pullPolicy: IfNotPresent
