[backport][rancher 2.10] ci/build: Fix Rancher Project Monitoring Compatibility Issues (#280) (#283)
* ci/build: Fix Rancher Project Monitoring Compatibility Issues (#280)

* Fix for local e2e testing

* Add kuberlr target version to build constants

* Add kuberlr version to Version script

* Add util scripts to help set proper Kuberlr image versions

* Add missing deps

(cherry picked from commit e1c084c35d1313c37dbe7103bbae48f9a35e31b1)

* Update build.yaml to Rancher 2.10 kuberlr version

* bump RPM to one that uses kuberlr based image

--- a/build.yaml
+++ b/build.yaml
@@ -1,7 +1,8 @@
-rancherProjectMonitoringVersion: 0.5.0
+rancherProjectMonitoringVersion: 0.5.1
 rancherMonitoringVersion : 105.2.0+up66.7.1-rancher.10
 k3sTestingMaxVersion: v1.31.7-k3s1
 k3sTestingMinVersion: v1.28.15-k3s1
+kuberlrVersion: v3
 
 # Dev use only
 # devChartsSource: https://github.com/{Dev}/ob-team-charts
